# VideoLoader

./: .gitignore  .gitmodules  MANIFEST.in  README.md  _test_memory_usage.py  pyproject.toml  readme.md  setup.py
.github/workflows/: python_test.yml  pythonpackage.yml
perf_tests/: _test_dataloader.py  _test_memory_usage.py  _test_speed.py  _test_speed_torchvision.py
pref_test/: _test_speed_decord.py
tests/: test_build.py  test_data.py  test_importable.py  test_python_binding.py  test_video.py  test_video_tar.py  test_videoloader.py
tests/tar/: bigzero.tar.head  checksum-error.tar  pax.tar  premature-eof.tar  test.tar  test_videos.tar  too-large.tar.head  too-large2.tar.head
videoloader/: __init__.py  dataloader.py
videoloader/_ext/: AVFilterGraph.cpp  AVFilterGraph.h  AVFormat.cpp  AVFormat.h  CMakeLists.txt  DLPack.cpp  DLPack.h  FileIO.cpp  FileIO.h  PyRef.cpp  PyRef.h  VideoDLPack.cpp  VideoDLPack.h  VideoDatasetLoader.cpp  VideoDatasetLoader.h  av_utils.cpp  av_utils.h  avfilter_graph.cpp  avformat.cpp  avformat.h  file_io.cpp  file_io.h  index.cpp  main.cpp  pyref.cpp  pyref.h  tar_iterator.cpp  tar_iterator.h  video.cpp  video.h  video_dataset_loader.cpp  video_dataset_loader.h  video_dlpack.cpp  video_tar.cpp  video_tar.h  videoloader.cpp  videoloader.h
videoloader/_ext/CMakeModules/: FindFFmpeg.cmake
videoloader/_ext/tests/: CMakeLists.txt  tar_iterator_tests.cpp  video_tar_tests.cpp  video_tests.cpp
